--- a/style.css
+++ b/style.css
@@ -2,8 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('reset.css');
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
 :root{
-    --cor-fundo: rgb(209, 203, 203);
+    --cor-fundo: rgb(47, 2, 2);
     --cor-texto:black ;
     --cor-fundo-cards: rgb(204, 186, 186);
     font-size: 14px;
@@ -14,10 +19,47 @@ html{
     font-size: 14px;
 }
 
+/* body {
+    font-family: "Montserrat", sans-serif;
+    background-color: rgb(221, 211, 198);
+} */
+
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: var(--cor-fundo);
     color: var(--cor-texto) 
+}
+
+nav{
+    background-color: black;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 8vh;
+}
+
+.logo{
+    text-transform: uppercase;
+    letter-spacing: 6px;
+
+}
+
+a{
+    color: #e2d9d9;
+    text-decoration: none;
+    transition: 0.4s;
+}
+
+a:hover{
+    opacity: 0.7;
+
+}
+
+ul{
+    display: flex;
+    list-style: none;
+    gap: 30px;
+    letter-spacing: 2px;
 }
 
 main{
@@ -31,7 +73,8 @@ h2, h3, strong{
 h2{
     /* rem = unidade de medida realativa ao font-size do elemento raiz (html) */
     font-size: 2.5rem;
-    text-align: center;
+    text-align: left;
+    color:rgb(84, 107, 128)
 
 }
 
@@ -61,13 +104,13 @@ h3{
     gap: 15px;
     background-color: var(--cor-fundo-cards);
     box-shadow: 0px 0px 12px 4px, rgba(0,0.0,0.5);
-    transition: 0.5s;
+    transition: 0.3s;
 
 }
 
 .produtos-lista .produtos:hover {
 
-    background-color: rgb(97, 91, 64);
+    background-color: rgb(148, 132, 63);
     transform: scale(1.1);
     cursor: pointer;
 }
